# Desafio4-I2A2-AgenteVR

./: .gitignore  README.md  app.py  llm_prompt.txt  main.py  pyproject.toml
data/input/: ATIVOS.xlsx
src/: __init__.py  calculation_engine.py  config.py  data_loader.py  data_processor.py  output_generator.py
