[project]
name = "desafio4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.0",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=1.0.5",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.3.32",
]
